Fixed footer link misalignment

--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -79,11 +79,15 @@
 .footer_list {
     display: flex;
     justify-content: space-between;
-    color: white;
-    background-color: black;
-    padding: 0.5rem 5vw;
+    padding: 0.5rem 10vw;
     list-style-type: none;
     margin: 0;
+}
+
+.footer_list li:nth-last-child(1) {
+    /* The final link object in the footer list is playing up and sitting a space above the other elements.
+       We fix that here by giving it a top margin. */
+    margin-top: 1rem;
 }
 
 .footer_list a {
